--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,19 @@
   "description": "Front-end do teste técnico - DTI",
   "main": "main.js",
   "scripts": {
-    "test": "test"
+    "test": "jest"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "jsx",
+      "ts",
+      "tsx",
+      "node",
+      "mjs"
+    ]
   },
   "repository": {
     "type": "git",
@@ -20,6 +32,7 @@
     "jest": "^29.5.0"
   },
   "dependencies": {
-    "http-server": "^14.1.1"
+    "http-server": "^14.1.1",
+    "node-fetch": "^3.3.1"
   }
 }
